# agentkb

./: .gitignore  README.md  justfile  pyproject.toml
docs/: architecture.md  consolidation.md  getting-started.md  hooks.md  implementation-roadmap-communications-and-references.md  index.md  search-quality-plan.md  search.md  store-plan-communications-and-references.md  sync.md
docs/stores/: chats.md  code.md  skills.md  wiki.md
scripts/: sync-docs-to-s3.py
src/agentkb/: __main__.py  cli.py  config.py  encoder.py  indexing.py  output.py  search.py  store.py  sync.py  traceability.py  utils.py
src/agentkb/chats/: __init__.py  cli.py  parser.py  renderer.py
src/agentkb/chats/sources/: __init__.py  claude.py  codex.py  pi.py
src/agentkb/communications/: __init__.py  cli.py  parser.py
src/agentkb/communications/sources/: __init__.py  x.py
src/agentkb/prompts/: __init__.py  consolidate_chats.md  consolidate_communications.md
src/agentkb/references/: __init__.py  cli.py  convert.py  fetchers.py  manifest.py
src/agentkb/skills/: __init__.py  cli.py
src/agentkb/wiki/: __init__.py  cli.py  manager.py  parser.py
tests/: test_chats_parser.py  test_codex_source.py  test_communications_cli.py  test_communications_registry.py  test_config.py  test_encoder.py  test_list_commands.py  test_migration.py  test_pi_source.py  test_prompts.py  test_search.py  test_sources_registry.py  test_store.py  test_store_plaid.py  test_sync.py  test_traceability.py  test_utils.py  test_wiki_manager.py  test_wiki_parser.py  test_x_source.py
