[project]
name = "agentkb"
version = "0.3.0"
description = "A unified search and knowledge tool for AI agents and developers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "pylate>=1.4",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "markdownify>=0.11",
    "boto3>=1.28",
]

[project.scripts]
agentkb = "agentkb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentkb"]
